# stock-tracker

./: .env.example  .gitignore  CMakeLists.txt  Dockerfile  HelloWorld  HelloWorld.cpp  Makefile  README.md  README_GRAPHVIZ.md  README_LOCAL_DEPLOY.md  docker-compose.yml  documentation.md  hello  hello_args_test  hello_threads_test  k8s_architecture.html  mermaid-diagram.md  model_meta.json  token.txt
.github/workflows/: build-and-push-dashboard.yml  e2e.yml  finance-ci.yml  python-tests.yml
angular_ui/: Dockerfile
benchmarks/: thread_bench.cpp
cpp_stock_ui/: Dockerfile  Makefile  README.md  cpp_heartbeat.py  health_server.py  http_client.cpp  http_client.h  main.cpp  post_metric.sh  start.sh  stock_ui  token.txt  token_store.cpp  token_store.h  watchlist.cpp  watchlist.h
dashboard_service/: Dockerfile  app.py  requirements.txt
dashboard_service/templates/: dashboard.html
django_help/: README.md  manage.py  requirements.txt
django_help/helpcenter/: urls.py  views.py
django_help/helpsite/: settings.py  urls.py  wsgi.py
docs/: COMPOSE-V2.md  docker_k8s_setup.md  secrets_scan_report.md
examples/: HelloArgs.cpp  HelloGui.cpp  HelloQt.cpp  HelloThreads.cpp  Sum.cpp
include/: greetings.hpp
k8s/: INGRESS.md  backend-credentials-secret.yaml  cpp_stock_ui-deployment-sidecar.yaml  cpp_stock_ui-deployment.yaml  cpp_stock_ui-secret.yaml  cpp_stock_ui-service.yaml  cron-post-metric-cpp-cronjob.yaml  cron-post-metric-python-cronjob.yaml  cron-post-metric-rust-cronjob.yaml  cron-post-metric-spring-cronjob.yaml  dashboard-deployment.yaml  dashboard-pv.yaml  dashboard-pvc.yaml  grafana-dashboards.yaml  grafana.yaml  helpsite-deployment-with-sidecar.yaml  log-collector.yaml  logging-sidecar-example.yaml  loki-config.yaml  loki-deployment.yaml  post-metric-cpp-job.yaml  post-metric-python-job.yaml  post-metric-rust-job.yaml  post-metric-spring-job.yaml  prometheus.yaml  promtail-config.yaml  promtail-daemonset.yaml  python_watchlist_gui-deployment.yaml  python_watchlist_gui-scripts-configmap.yaml  three_renderer-deployment.yaml  three_renderer-ingress.yaml
node_k8s_ui/: Dockerfile  app.js  package.json
prometheus/: prom.yml
python_watchlist_gui/: Dockerfile  README.md  __init__.py  healthcheck.py  main.py  post_metric.py  requirements.txt  start.sh  token.txt
python_watchlist_gui/tests/: test_main.py
rust_hello_world/: .gitignore  Cargo.toml  README.md  post_metric.sh
rust_hello_world/src/: main.rs
scripts/: compose-v2.sh  post_metric.sh  remove_history_instructions.sh
services/finance_tracker/: Dockerfile  README.md  app.js  docker-compose.yml  openapi.json  package-lock.json  package.json
spring_hello_world/: Dockerfile  README.md  build.gradle  gradle.properties  post_metric.sh  token.txt
spring_hello_world/data/: stocks.db
src/: greetings.cpp
tests/: concurrency_test.cpp  greetings_test.cpp  test_all.sh
three_renderer/: Dockerfile  README.md  app.js  convert_mermaid.js  mermaid-diagram.md  package-lock.json  package.json
three_renderer/public/: force_graph.html  index.html  landing.html  matrix_heatmap.html  model.gltf  model_annotated.gltf  model_meta.json  model_meta_metrics.json  model_meta_time.json  treemap.html  viewer_gltf.html
three_renderer/tools/: analyze_deps.js  discover_repo_paths.js  export_model_meta_to_gltf.js  forward_landing.sh  generate_git_history.js  generate_model_json.js  headless_check.js  obj_to_gltf.js  post_model_meta_dev.sh  run_convert_md.js  sync_to_pod.sh
tools/: cpp_health.py
tools/log_collector/: Dockerfile  README.md  app.py  requirements.txt
tools/log_sidecar/: Dockerfile  README.md  sidecar.py
(+84 files in other folders)
